<resources>
    <string name="app_name">Pokemon App</string>
    <string name="search_pokemons">Search Pokemons</string>
    <string name="retry">Retry</string>
    <string name="tap_to_retry">There was an error\ntap to retry</string>
    <string name="statistics">Base Stats</string>
    <string name="thanks">Thanks for installing\nCheck more of my work on Github</string>
    <string name="thanks_header">Thank you!!</string>
    <string name="confirm_disclaimer">Continue</string>
    <string name="scroll_up_indicator">Scroll up indicator</string>
    <string name="latest">Latest</string>
    <string name="_1_n">1 - N</string>
    <string name="a_z">A - Z</string>


</resources>
