<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/green">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/search_background"
            android:drawableStart="@drawable/ic_baseline_search"
            android:drawablePadding="10dp"
            android:focusableInTouchMode="true"
            android:hint="@string/search_pokemons"
            android:imeOptions="actionSearch"
            android:paddingStart="10dp"
            android:singleLine="true"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tablayout" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tablayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            app:tabSelectedTextColor="@color/blue"
            android:background="@drawable/search_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabLatest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latest"></com.google.android.material.tabs.TabItem>

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab1toN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1_n"></com.google.android.material.tabs.TabItem>

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabatoZ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a_z"></com.google.android.material.tabs.TabItem>

        </com.google.android.material.tabs.TabLayout>


        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/searchView">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/pokemon_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingStart="@dimen/card_side_margin"
                android:paddingTop="@dimen/card_side_margin"
                android:paddingEnd="@dimen/card_side_margin"
                android:paddingBottom="100dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                app:layout_constraintTop_toBottomOf="@+id/toolbar"
                app:spanCount="2"
                tools:listitem="@layout/list_item_pokemon" />


        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tap_to_retry"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/scroll_Up"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="16dp"
            android:animateLayoutChanges="true"
            android:background="@drawable/up_background"
            android:contentDescription="@string/scroll_up_indicator"
            android:src="@drawable/ic_up"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
